--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
                     <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Token FCS &amp; GROW</strong></h3>
-                    <p class="mbr-text mbr-fonts-style display-7">Focusm token economy includes staking, locks, liquidity incentives, buy backs, and burns. These are driven by demand drawn by both gameplay perks and value drawn from the game economy.<br><br>FCS tokens are the governance token. These benefit from ecosystem fees. GROW tokens are the in-game token. GROW tokens are used to buy PLANTs and are earned from focusing while staking a PLANT.</p>
+                    <p class="mbr-text mbr-fonts-style display-7">$FCS are main or external governance tokens. They benefit from ecosystem charges. $GROW are internal application tokens (in-app token).<br><br>$GROW tokens are earned for focusing while staking (focusing) NFTs (PLANTs). $GROW tokens can be exchanged for $FCS. $FCS tokens allow you to buy NFTs (PLANTs) on the secondary market (NFT Marketplace).</p>
                 </div>
             </div>
         </div>
