--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             </div>
             <div class="col-12 col-lg">
                 <div class="text-wrapper">
-                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Token FCS &amp; GROW</strong></h3>
+                    <h3 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong>Token $FCS &amp; $GROW</strong></h3>
                     <p class="mbr-text mbr-fonts-style display-7">$FCS are main or external governance tokens. They benefit from ecosystem charges. $GROW are internal application tokens (in-app token).<br><br>$GROW tokens are earned for focusing while staking (focusing) NFTs (PLANTs). $GROW tokens can be exchanged for $FCS. $FCS tokens allow you to buy NFTs (PLANTs) on the secondary market (NFT Marketplace).</p>
                 </div>
             </div>
